--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,30 @@
 </head>
 
 <body>
+	<div id="preloader">
+		<img src="assets/loader.svg" />
+	</div>
+	<style>
+		#preloader {
+			display: flex;
+			position: absolute;
+			align-items: center;
+			justify-content: center;
+			background-color: #e1e6e8;
+			width: 100%;
+			height: 100%;
+			transition: opacity 500ms;
+			top: 0;
+		}
+
+		#preloader.hidden {
+			opacity: 0;
+		}
+
+		#p5_loading {
+			display: none;
+		}
+	</style>
 </body>
 
 </html>
