feat: Add default path to use with assets

--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,18 @@
 	</div>
 	<style>
 		.game {
-			width: 600px;
-			min-height: 400px;
+			width: 100%;
+			height: 100vh;
 			max-width: 100%;
 			position: relative;
 		}
+
+		body {
+			margin: 0;
+		}
 	</style>
 
-	<script type="module" src="build/bundle.js?v=11012021"></script>
+	<script type="module" src="flappy.js?v=11012021"></script>
 </body>
 
 </html>
